--- a/3pty/mkl_cblas_sgemm/Makefile
+++ b/3pty/mkl_cblas_sgemm/Makefile
@@ -1,5 +1,5 @@
 MKLROOT=/opt/intel/mkl
-MKLLIBS=-L$(MKLROOT)/lib/intel64 -lmkl_intel_lp64 -lmkl_intel_thread -lmkl_core -liomp5 -lpthread -lm -ldl
+MKLLIBS=-L$(MKLROOT)/lib/intel64 -lmkl_intel_ilp64 -lmkl_sequential -lmkl_core -lpthread -lm -ldl
 
 all: mkl_cblas_sgemm
 
