Add some compiler options to support offloading.

--- a/src/Makefile
+++ b/src/Makefile
@@ -4,7 +4,7 @@ MPICC=mpicc
 all: cannon-su cannon-so
 
 cannon-su: cannon-su.c
-	@$(CC) -g -foffload=nvptx-none -fopenmp $^ -o $@ -lm -lgomp
+	@$(CC) -g -fno-stack-protector -foffload=nvptx-none -fopenmp $^ -o $@ -lm -lgomp
 
 cannon-so: cannon-so.c
 	@$(MPICC) -g $^ -o $@ -lm -lmpi
