First pass at #ifdef-separated OMP and ACC implementations. NB: OMP version is not currently functional.

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,10 +1,14 @@
 CC=gcc-7
 MPICC=mpicc
+ACC_INCS=-I/opt/pgi/linux-86-64/2017/include
 
-all: cannon-su cannon-so
+all: cannon-su-acc cannon-so
 
-cannon-su: cannon-su.c
-	@$(CC) -g -fno-stack-protector -foffload=nvptx-none -fopenmp $^ -o $@ -lm -lgomp
+cannon-su-omp: cannon-su.c
+	@$(CC) -g -DOMP -fno-stack-protector -foffload=nvptx-none -fopenmp $^ -o $@ -lm -lgomp
+
+cannon-su-acc: cannon-su.c
+	pgcc -g $(ACC_INCS) -DACC $^ -o $@ -lm
 
 cannon-so: cannon-so.c
 	@$(MPICC) -g $^ -o $@ -lm -lmpi
