Added compiler flags for scale-up version.

--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,7 @@ cannon-su-omp: cannon-su.c
 	@$(CC) -g -DOMP -fno-stack-protector -foffload=nvptx-none -fopenmp $^ -o $@ -lm -lgomp
 
 cannon-su-acc: cannon-su.c
-	@pgcc -g $(ACC_INCS) -DACC $^ -o $@ $(ACC_LIBS) -lm
+	@pgcc -g $(ACC_INCS) -DACC -ta=nvidia -acc -Minfo=accel $^ -o $@ $(ACC_LIBS) -lm
 
 cannon-so: cannon-so.c
 	@$(MPICC) -g $^ -o $@ -lm -lmpi -lnuma
